tests/errors/lexing/test08.cmp
program main 
begin
   var procedure := 1  (* keyword != identifier *)
end 